# thumpsvg

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  Makefile  app.hpp  bitmap.hpp  brush.hpp  build.dep  com.hpp  common.h  debug.hpp  dll.def  dll.h  dll.rc  gdi.hpp  glib.hpp  rebar.hpp  rect.hpp  render.hpp  sans.hpp  sdk.h  status.hpp  svg.hpp  svgopts.hpp  svgtest.cpp  svgview.cpp  svgview.rc  thumpsvg.cpp  thumpsvg.h  thumpsvg.rc  toolbar.hpp  uistate.hpp  utf8str.hpp  ver.h  viewer.hpp  viewimpl.hpp  window.hpp  winimpl.hpp
src/inc/: glibconfig.h
src/lib/: resvg.dll.def
src/res/: reginst.inf
tools/: makelib-cr.cmd  makelib-ts.cmd  makelib.cmd  updep.cmd
